--- a/styles.css
+++ b/styles.css
@@ -71,7 +71,6 @@ hr {
 
 .accountt {
     display: flex;
-    width: 70%;
 }
 
 .balance {
@@ -93,11 +92,25 @@ hr {
 .bigbox {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
-    width: 70%;
+    width: 100%;
+    gap: 10px;
 }
 
 .currency {
     display: flex;
     flex-direction: row;
+}
+
+.smallbox1 {
+    width: 40%;
+}
+
+.smallbox2 {
+    width: 40%;
+}
+
+textarea {
+    min-width: 100%;
+    min-height: 300px;
+    resize: vertical;
 }
