--- a/styles.css
+++ b/styles.css
@@ -127,11 +127,18 @@ hr {
     background-color: rgb(17, 203, 220);
     border-radius: 15px;
     box-shadow: rgba(17, 179, 224, 0.605) 0px 0px 0px 3px;
+    font-family: "Itim", cursive;
+    font-weight: 150;
+    font-style: normal;
+    font-size: 18px;
+    font-style: inherit;
+    color: rgb(255, 255, 255);
 }
 
 .textarea {
     display: flex;
     justify-content: center;
+
 }
 
 .icon {
